--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <p style="margin-top: 20px;">
             <a href="#features">Features</a> | 
             <a href="#modes">Modes</a> | 
-            <a href="#download">Download</a>
+            <a href="#https://www.razer.com/cortex?srsltid=AfmBOoos_BodEBsD3XD1ol_TA2Jsx544q_7YFLJqGqV3MfEaTDX7ty2e">Download</a>
         </p>
     </footer>
 
