--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -473,7 +473,7 @@
         <p style="margin-top: 20px;">
             <a href="#features">Features</a> | 
             <a href="#modes">Modes</a> | 
-            <a href="#https://www.razer.com/cortex?srsltid=AfmBOoos_BodEBsD3XD1ol_TA2Jsx544q_7YFLJqGqV3MfEaTDX7ty2e">Download</a>
+            <a href="#download">Download</a>
         </p>
     </footer>
 
@@ -505,7 +505,15 @@
         });
     </script>
 </body>
+><html>
+
 </html>
 <link rel="stylesheet" href="ChaosLauncher.csproj">
 <link rel="stylesheet" href="BUILD_INSTRUCTIONS.ms">
-
+<link rel="stylesheet" href="ChaosEngine.cs">
+<link rel="stylesheet" href="MainWindow.xaml.cs">
+<link rel="stylesheet" href="QUICK_START.md">
+<link rel="stylesheet" href="SIMPLE_BUILD_3_STEPS.md">
+<html>
+    
+</html>
