--- a/index.html
+++ b/index.html
@@ -514,6 +514,6 @@
 <link rel="stylesheet" href="MainWindow.xaml.cs">
 <link rel="stylesheet" href="QUICK_START.md">
 <link rel="stylesheet" href="SIMPLE_BUILD_3_STEPS.md">
-<html>
-    
-</html>
+<link rel="stylesheet" href="build.yml">
+
+
